1998-11-04  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-encode-phrase-route-addr-to-rword-list):
	Don't delete the front spaces.
	(eword-encode-addresses-to-rword-list): Don't supplement space;
	use `nconc' instead of `append'.
	(eword-encode-msg-id-to-rword-list): Supplement the front space;
	use `nconc' instead of `append'.

1998-11-02  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (mime-field-decoder-cache): New variable.
	(mime-find-field-decoder): Use `mime-field-decoder-cache'.
	(mime-update-field-decoder-cache): New variable.
	(mime-update-field-decoder-cache): New function.
	(mime-decode-header-in-region): Use `mime-field-decoder-cache'.

	* mmgeneric.el (mime-insert-header-from-buffer): Use
	`mime-field-decoder-cache'.

1998-11-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): New function.
	(mime-decode-header-in-buffer): Use function
	`mime-decode-header-in-region'.

1998-10-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Refer
	`mime-field-decoder-alist' instead of hard-coding.

	* mime.el (mime-read-field): Use `mime-decode-field-body'.

	* eword-decode.el (eword-decode-and-unfold-structured-field): Add
	optional dummy argument `start-column' and `max-column'.
	(eword-decode-structured-field-body): Change interface.
	(eword-decode-unstructured-field-body): Change interface to add
	optional dummy argument `start-column' and `max-column'.
	(eword-decode-and-unfold-unstructured-field): Add optional dummy
	argument `start-column' and `max-column'.
	(mime-field-decoder-alist): New variable; abolish user option
	`eword-decode-ignored-field-list' and
	`eword-decode-structured-field-list'.
	(mime-set-field-decoder): New function.
	(mime-find-field-decoder): New function.
	(mime-decode-field-body): New function; abolish function
	`eword-decode-field-body'.
	(mime-decode-header-in-buffer): Renamed from